--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^0.13.4
+  shared_preferences: ^2.0.9
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.1
