앱 아이콘/웹 파비콘 수정 및 연락처 엑셀 파일 업로드 관련 안내 문구 추가

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "precapstone",
-    "short_name": "precapstone",
+    "name": "READ:ME",
+    "short_name": "READ:ME",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "READ:ME",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
