--- a/nginx.conf
+++ b/nginx.conf
@@ -9,17 +9,24 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location /images/ {
-            proxy_pass http://backend:3000;
-            proxy_set_header X-Forwarded-Host $host:$server_port;
-            proxy_set_header X-Forwarded-Server $host;
+        location /v1/ {
+            proxy_pass http://backend:9999/v1/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /v1/ {
-            proxy_pass http://backend:3000;
-            proxy_set_header X-Forwarded-Host $host:$server_port;
-            proxy_set_header X-Forwarded-Server $host;
+        location /docs {
+            proxy_pass http://backend:9999/docs;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /images/ {
+            proxy_pass http://backend:9999/images/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
